--- a/notebooks/Modelo - Modelo simple.ipynb
+++ b/notebooks/Modelo - Modelo simple.ipynb
@@ -48,9 +48,7 @@
   {
    "cell_type": "markdown",
    "id": "bb60c9b1",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Obtain input data"
    ]
@@ -59,9 +57,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "5c4b01fd",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from src.dataload import load_audio_data\n",
@@ -75,9 +71,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "d0cdc6f0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -194,20 +188,16 @@
   {
    "cell_type": "markdown",
    "id": "e72b9309",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Target Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "bfe855c2",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from src.dataload import audio_select_mean_vote\n",
@@ -222,11 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "4d299c89",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -367,7 +355,7 @@
        "[471 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,12 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "0edddf16",
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -845,7 +830,7 @@
        "0.98641  8.428333  15.143333  12.661667  surprise"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,10 +841,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "676c1935",
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -869,7 +853,7 @@
        "52"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,12 +864,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a79e0323",
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1026,7 +1007,7 @@
        "[142794 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,19 +1019,16 @@
   {
    "cell_type": "markdown",
    "id": "c234f34d",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Create input - target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "8ff1ceea",
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1060,11 +1038,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "0a66a89b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_train = pd.merge(time_index, df_input, how = 'left', on = 'Time')\n",
@@ -1075,11 +1051,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "fe41099a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1232,7 +1206,7 @@
        "[4759053 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,10 +1217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "db19e1c3",
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1259,12 +1232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "20964bbc",
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1323,11 +1293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "49a7a7eb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1524,7 +1492,7 @@
        "[5 rows x 163 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1538,20 +1506,16 @@
   {
    "cell_type": "markdown",
    "id": "728a74d3",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Pre-Process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "47205fb7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = Features.iloc[: ,:-1].values\n",
@@ -1560,11 +1524,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "773fa604",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
@@ -1575,11 +1537,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "a8f269bd",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1587,7 +1547,7 @@
        "((2179, 162), (2179, 4), (727, 162), (727, 4))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,11 +1562,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "b0eee837",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1614,7 +1572,7 @@
        "((2179, 162), (2179, 4), (727, 162), (727, 4))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,11 +1587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "bc3eb124",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1641,7 +1597,7 @@
        "((2179, 162, 1), (2179, 4), (727, 162, 1), (727, 4))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,64 +1612,26 @@
   {
    "cell_type": "markdown",
    "id": "13c2b392",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Creación del modelo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "894104ef",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_1\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv1d_4 (Conv1D)           (None, 162, 256)          1536      \n",
-      "                                                                 \n",
-      " max_pooling1d_4 (MaxPooling  (None, 81, 256)          0         \n",
-      " 1D)                                                             \n",
-      "                                                                 \n",
-      " conv1d_5 (Conv1D)           (None, 81, 256)           327936    \n",
-      "                                                                 \n",
-      " max_pooling1d_5 (MaxPooling  (None, 41, 256)          0         \n",
-      " 1D)                                                             \n",
-      "                                                                 \n",
-      " conv1d_6 (Conv1D)           (None, 41, 128)           163968    \n",
-      "                                                                 \n",
-      " max_pooling1d_6 (MaxPooling  (None, 21, 128)          0         \n",
-      " 1D)                                                             \n",
-      "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 21, 128)           0         \n",
-      "                                                                 \n",
-      " conv1d_7 (Conv1D)           (None, 21, 64)            41024     \n",
-      "                                                                 \n",
-      " max_pooling1d_7 (MaxPooling  (None, 11, 64)           0         \n",
-      " 1D)                                                             \n",
-      "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 704)               0         \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 32)                22560     \n",
-      "                                                                 \n",
-      " dropout_3 (Dropout)         (None, 32)                0         \n",
-      "                                                                 \n",
-      " dense_3 (Dense)             (None, 4)                 132       \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 557,156\n",
-      "Trainable params: 557,156\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcallbacks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReduceLROnPlateau\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sequential\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
      ]
     }
    ],
@@ -1752,9 +1670,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "be14ac3a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1872,9 +1788,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "46554117",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1928,9 +1842,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "b4f304ea",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1952,9 +1864,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "22cce512",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2067,9 +1977,7 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "8573ae5f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2101,9 +2009,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "480f3254",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2131,9 +2037,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a5aba0d5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -2143,7 +2047,7 @@
   "kernelspec": {
    "display_name": "SER",
    "language": "python",
-   "name": "ser"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2155,7 +2059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
