--- a/notebooks/Modelo - Modelo simple.ipynb
+++ b/notebooks/Modelo - Modelo simple.ipynb
@@ -368,7 +368,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "0edddf16",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1234,7 +1236,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "20964bbc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
