--- a/notebooks/Annotation - Mean Value (Every Emotion).ipynb
+++ b/notebooks/Annotation - Mean Value (Every Emotion).ipynb
@@ -182,10 +182,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "SER",
    "language": "python",
-   "name": "test2"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -197,7 +198,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
