--- a/notebooks/Model - Validations.ipynb
+++ b/notebooks/Model - Validations.ipynb
@@ -55,7 +55,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "8692c3a7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -829,7 +831,7 @@
    "execution_count": 11,
    "id": "04d1eec1",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -897,374 +899,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "id": "25ca8e47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_function(a, b, **kwargs):\n",
+    "    print(kwargs['c'])\n",
+    "    print(kwargs['d'])\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "5d66e078",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>153</th>\n",
-       "      <th>154</th>\n",
-       "      <th>155</th>\n",
-       "      <th>156</th>\n",
-       "      <th>157</th>\n",
-       "      <th>158</th>\n",
-       "      <th>159</th>\n",
-       "      <th>160</th>\n",
-       "      <th>161</th>\n",
-       "      <th>labels</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.111977</td>\n",
-       "      <td>0.377967</td>\n",
-       "      <td>0.459117</td>\n",
-       "      <td>0.507148</td>\n",
-       "      <td>0.481692</td>\n",
-       "      <td>0.573824</td>\n",
-       "      <td>0.650968</td>\n",
-       "      <td>0.533275</td>\n",
-       "      <td>0.439927</td>\n",
-       "      <td>0.446028</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001249</td>\n",
-       "      <td>0.000750</td>\n",
-       "      <td>0.000706</td>\n",
-       "      <td>0.000482</td>\n",
-       "      <td>0.000325</td>\n",
-       "      <td>0.000719</td>\n",
-       "      <td>0.000668</td>\n",
-       "      <td>0.000441</td>\n",
-       "      <td>0.000035</td>\n",
-       "      <td>disgust</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.118591</td>\n",
-       "      <td>0.389530</td>\n",
-       "      <td>0.482715</td>\n",
-       "      <td>0.518263</td>\n",
-       "      <td>0.467938</td>\n",
-       "      <td>0.536946</td>\n",
-       "      <td>0.643990</td>\n",
-       "      <td>0.556866</td>\n",
-       "      <td>0.443840</td>\n",
-       "      <td>0.451185</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>0.000749</td>\n",
-       "      <td>0.000705</td>\n",
-       "      <td>0.000481</td>\n",
-       "      <td>0.000323</td>\n",
-       "      <td>0.000717</td>\n",
-       "      <td>0.000666</td>\n",
-       "      <td>0.000439</td>\n",
-       "      <td>0.000034</td>\n",
-       "      <td>disgust</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.134036</td>\n",
-       "      <td>0.458097</td>\n",
-       "      <td>0.539642</td>\n",
-       "      <td>0.549072</td>\n",
-       "      <td>0.551419</td>\n",
-       "      <td>0.623416</td>\n",
-       "      <td>0.628216</td>\n",
-       "      <td>0.559033</td>\n",
-       "      <td>0.486514</td>\n",
-       "      <td>0.482826</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001306</td>\n",
-       "      <td>0.000785</td>\n",
-       "      <td>0.000720</td>\n",
-       "      <td>0.000496</td>\n",
-       "      <td>0.000338</td>\n",
-       "      <td>0.000723</td>\n",
-       "      <td>0.000671</td>\n",
-       "      <td>0.000441</td>\n",
-       "      <td>0.000036</td>\n",
-       "      <td>disgust</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.136156</td>\n",
-       "      <td>0.560872</td>\n",
-       "      <td>0.510107</td>\n",
-       "      <td>0.518170</td>\n",
-       "      <td>0.501565</td>\n",
-       "      <td>0.559149</td>\n",
-       "      <td>0.542904</td>\n",
-       "      <td>0.539990</td>\n",
-       "      <td>0.495998</td>\n",
-       "      <td>0.459362</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001230</td>\n",
-       "      <td>0.000719</td>\n",
-       "      <td>0.000651</td>\n",
-       "      <td>0.000427</td>\n",
-       "      <td>0.000288</td>\n",
-       "      <td>0.000675</td>\n",
-       "      <td>0.000609</td>\n",
-       "      <td>0.000387</td>\n",
-       "      <td>0.000030</td>\n",
-       "      <td>disgust</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.137603</td>\n",
-       "      <td>0.597443</td>\n",
-       "      <td>0.533161</td>\n",
-       "      <td>0.557150</td>\n",
-       "      <td>0.541453</td>\n",
-       "      <td>0.556101</td>\n",
-       "      <td>0.505514</td>\n",
-       "      <td>0.532767</td>\n",
-       "      <td>0.492943</td>\n",
-       "      <td>0.474928</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000814</td>\n",
-       "      <td>0.000422</td>\n",
-       "      <td>0.000470</td>\n",
-       "      <td>0.000289</td>\n",
-       "      <td>0.000174</td>\n",
-       "      <td>0.000373</td>\n",
-       "      <td>0.000376</td>\n",
-       "      <td>0.000205</td>\n",
-       "      <td>0.000018</td>\n",
-       "      <td>disgust</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>656</th>\n",
-       "      <td>0.093713</td>\n",
-       "      <td>0.692287</td>\n",
-       "      <td>0.627113</td>\n",
-       "      <td>0.559079</td>\n",
-       "      <td>0.487926</td>\n",
-       "      <td>0.470864</td>\n",
-       "      <td>0.427338</td>\n",
-       "      <td>0.494610</td>\n",
-       "      <td>0.592537</td>\n",
-       "      <td>0.532963</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000335</td>\n",
-       "      <td>0.000358</td>\n",
-       "      <td>0.000275</td>\n",
-       "      <td>0.000196</td>\n",
-       "      <td>0.000131</td>\n",
-       "      <td>0.000110</td>\n",
-       "      <td>0.000167</td>\n",
-       "      <td>0.000081</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>657</th>\n",
-       "      <td>0.094071</td>\n",
-       "      <td>0.649572</td>\n",
-       "      <td>0.575151</td>\n",
-       "      <td>0.478866</td>\n",
-       "      <td>0.486571</td>\n",
-       "      <td>0.478114</td>\n",
-       "      <td>0.452075</td>\n",
-       "      <td>0.542901</td>\n",
-       "      <td>0.621628</td>\n",
-       "      <td>0.572513</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000316</td>\n",
-       "      <td>0.000350</td>\n",
-       "      <td>0.000266</td>\n",
-       "      <td>0.000187</td>\n",
-       "      <td>0.000110</td>\n",
-       "      <td>0.000098</td>\n",
-       "      <td>0.000140</td>\n",
-       "      <td>0.000075</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>658</th>\n",
-       "      <td>0.099288</td>\n",
-       "      <td>0.611186</td>\n",
-       "      <td>0.546004</td>\n",
-       "      <td>0.480517</td>\n",
-       "      <td>0.471594</td>\n",
-       "      <td>0.461204</td>\n",
-       "      <td>0.461449</td>\n",
-       "      <td>0.562646</td>\n",
-       "      <td>0.625084</td>\n",
-       "      <td>0.568048</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000307</td>\n",
-       "      <td>0.000305</td>\n",
-       "      <td>0.000249</td>\n",
-       "      <td>0.000174</td>\n",
-       "      <td>0.000096</td>\n",
-       "      <td>0.000078</td>\n",
-       "      <td>0.000098</td>\n",
-       "      <td>0.000056</td>\n",
-       "      <td>0.000007</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>659</th>\n",
-       "      <td>0.108738</td>\n",
-       "      <td>0.687040</td>\n",
-       "      <td>0.598507</td>\n",
-       "      <td>0.516218</td>\n",
-       "      <td>0.459069</td>\n",
-       "      <td>0.455469</td>\n",
-       "      <td>0.452365</td>\n",
-       "      <td>0.501539</td>\n",
-       "      <td>0.606251</td>\n",
-       "      <td>0.588457</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000118</td>\n",
-       "      <td>0.000103</td>\n",
-       "      <td>0.000080</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>0.000038</td>\n",
-       "      <td>0.000033</td>\n",
-       "      <td>0.000057</td>\n",
-       "      <td>0.000045</td>\n",
-       "      <td>0.000007</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>660</th>\n",
-       "      <td>0.105228</td>\n",
-       "      <td>0.660935</td>\n",
-       "      <td>0.586852</td>\n",
-       "      <td>0.520840</td>\n",
-       "      <td>0.463122</td>\n",
-       "      <td>0.474325</td>\n",
-       "      <td>0.478015</td>\n",
-       "      <td>0.493238</td>\n",
-       "      <td>0.554938</td>\n",
-       "      <td>0.548563</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000210</td>\n",
-       "      <td>0.000147</td>\n",
-       "      <td>0.000120</td>\n",
-       "      <td>0.000096</td>\n",
-       "      <td>0.000061</td>\n",
-       "      <td>0.000053</td>\n",
-       "      <td>0.000100</td>\n",
-       "      <td>0.000075</td>\n",
-       "      <td>0.000011</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>661 rows × 163 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            0         1         2         3         4         5         6  \\\n",
-       "0    0.111977  0.377967  0.459117  0.507148  0.481692  0.573824  0.650968   \n",
-       "1    0.118591  0.389530  0.482715  0.518263  0.467938  0.536946  0.643990   \n",
-       "2    0.134036  0.458097  0.539642  0.549072  0.551419  0.623416  0.628216   \n",
-       "3    0.136156  0.560872  0.510107  0.518170  0.501565  0.559149  0.542904   \n",
-       "4    0.137603  0.597443  0.533161  0.557150  0.541453  0.556101  0.505514   \n",
-       "..        ...       ...       ...       ...       ...       ...       ...   \n",
-       "656  0.093713  0.692287  0.627113  0.559079  0.487926  0.470864  0.427338   \n",
-       "657  0.094071  0.649572  0.575151  0.478866  0.486571  0.478114  0.452075   \n",
-       "658  0.099288  0.611186  0.546004  0.480517  0.471594  0.461204  0.461449   \n",
-       "659  0.108738  0.687040  0.598507  0.516218  0.459069  0.455469  0.452365   \n",
-       "660  0.105228  0.660935  0.586852  0.520840  0.463122  0.474325  0.478015   \n",
-       "\n",
-       "            7         8         9  ...       153       154       155  \\\n",
-       "0    0.533275  0.439927  0.446028  ...  0.001249  0.000750  0.000706   \n",
-       "1    0.556866  0.443840  0.451185  ...  0.001246  0.000749  0.000705   \n",
-       "2    0.559033  0.486514  0.482826  ...  0.001306  0.000785  0.000720   \n",
-       "3    0.539990  0.495998  0.459362  ...  0.001230  0.000719  0.000651   \n",
-       "4    0.532767  0.492943  0.474928  ...  0.000814  0.000422  0.000470   \n",
-       "..        ...       ...       ...  ...       ...       ...       ...   \n",
-       "656  0.494610  0.592537  0.532963  ...  0.000335  0.000358  0.000275   \n",
-       "657  0.542901  0.621628  0.572513  ...  0.000316  0.000350  0.000266   \n",
-       "658  0.562646  0.625084  0.568048  ...  0.000307  0.000305  0.000249   \n",
-       "659  0.501539  0.606251  0.588457  ...  0.000118  0.000103  0.000080   \n",
-       "660  0.493238  0.554938  0.548563  ...  0.000210  0.000147  0.000120   \n",
-       "\n",
-       "          156       157       158       159       160       161   labels  \n",
-       "0    0.000482  0.000325  0.000719  0.000668  0.000441  0.000035  disgust  \n",
-       "1    0.000481  0.000323  0.000717  0.000666  0.000439  0.000034  disgust  \n",
-       "2    0.000496  0.000338  0.000723  0.000671  0.000441  0.000036  disgust  \n",
-       "3    0.000427  0.000288  0.000675  0.000609  0.000387  0.000030  disgust  \n",
-       "4    0.000289  0.000174  0.000373  0.000376  0.000205  0.000018  disgust  \n",
-       "..        ...       ...       ...       ...       ...       ...      ...  \n",
-       "656  0.000196  0.000131  0.000110  0.000167  0.000081  0.000008    anger  \n",
-       "657  0.000187  0.000110  0.000098  0.000140  0.000075  0.000008    anger  \n",
-       "658  0.000174  0.000096  0.000078  0.000098  0.000056  0.000007    anger  \n",
-       "659  0.000063  0.000038  0.000033  0.000057  0.000045  0.000007    anger  \n",
-       "660  0.000096  0.000061  0.000053  0.000100  0.000075  0.000011    anger  \n",
-       "\n",
-       "[661 rows x 163 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n"
+     ]
     }
    ],
    "source": [
-    "Features"
+    "my_function('a','b', c = 4, d = 5 )"
    ]
   },
   {
