--- a/notebooks/Annotation - Exponential Weighted Average.ipynb
+++ b/notebooks/Annotation - Exponential Weighted Average.ipynb
@@ -33,12 +33,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.dataload import get_wadf, audio_select_mean_vote"
+    "from src.dataload import get_wadf, audio_select_mean_vote, get_wa"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "bd833ebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\emanu\\\\Documents\\\\GitHub\\\\mspconv_ftlab'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0b0e614f",
    "metadata": {},
    "outputs": [],
@@ -77,12 +98,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9cb666ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_wadf('197_1_Valence')"
+    "df_a = get_wadf('197_1_Valence')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d179b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Annotator</th>\n",
+       "      <th>Annotation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.041000</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.002200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.056524</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.002200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.056957</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.002200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.058411</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.002200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71204</th>\n",
+       "      <td>305.030400</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.901513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71205</th>\n",
+       "      <td>305.035700</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.901513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71206</th>\n",
+       "      <td>305.039900</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.758918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71207</th>\n",
+       "      <td>305.042900</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.758918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71208</th>\n",
+       "      <td>305.052600</td>\n",
+       "      <td>WAvg</td>\n",
+       "      <td>-0.758918</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71209 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Time Annotator  Annotation\n",
+       "0        0.040000      WAvg         NaN\n",
+       "1        0.041000      WAvg   -0.002200\n",
+       "2        0.056524      WAvg   -0.002200\n",
+       "3        0.056957      WAvg   -0.002200\n",
+       "4        0.058411      WAvg   -0.002200\n",
+       "...           ...       ...         ...\n",
+       "71204  305.030400      WAvg   -0.901513\n",
+       "71205  305.035700      WAvg   -0.901513\n",
+       "71206  305.039900      WAvg   -0.758918\n",
+       "71207  305.042900      WAvg   -0.758918\n",
+       "71208  305.052600      WAvg   -0.758918\n",
+       "\n",
+       "[71209 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e84eb249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_wa(197, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ca249c69",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valence</th>\n",
+       "      <th>Tiempo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.040000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.002200</td>\n",
+       "      <td>0.041000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.002200</td>\n",
+       "      <td>0.056524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.002200</td>\n",
+       "      <td>0.056957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.002200</td>\n",
+       "      <td>0.058411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64179</th>\n",
+       "      <td>16.356030</td>\n",
+       "      <td>274.885400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64180</th>\n",
+       "      <td>16.356030</td>\n",
+       "      <td>274.886200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64181</th>\n",
+       "      <td>16.008436</td>\n",
+       "      <td>274.887900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64182</th>\n",
+       "      <td>16.008436</td>\n",
+       "      <td>274.894100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64183</th>\n",
+       "      <td>16.008436</td>\n",
+       "      <td>274.900700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>64184 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Valence      Tiempo\n",
+       "0       0.000000    0.040000\n",
+       "1      -0.002200    0.041000\n",
+       "2      -0.002200    0.056524\n",
+       "3      -0.002200    0.056957\n",
+       "4      -0.002200    0.058411\n",
+       "...          ...         ...\n",
+       "64179  16.356030  274.885400\n",
+       "64180  16.356030  274.886200\n",
+       "64181  16.008436  274.887900\n",
+       "64182  16.008436  274.894100\n",
+       "64183  16.008436  274.900700\n",
+       "\n",
+       "[64184 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(np.transpose([df[0]['Valence'][0],df[0]['Valence'][1]]), columns = ['Valence','Tiempo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d85f3413",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valence</th>\n",
+       "      <th>Tiempo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.040000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.044345</td>\n",
+       "      <td>0.041000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.044345</td>\n",
+       "      <td>0.057104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.044345</td>\n",
+       "      <td>0.059485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.044345</td>\n",
+       "      <td>0.059921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64179</th>\n",
+       "      <td>20.948343</td>\n",
+       "      <td>305.016000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64180</th>\n",
+       "      <td>20.948343</td>\n",
+       "      <td>305.025900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64181</th>\n",
+       "      <td>20.948343</td>\n",
+       "      <td>305.032300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64182</th>\n",
+       "      <td>20.948343</td>\n",
+       "      <td>305.042700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64183</th>\n",
+       "      <td>20.948343</td>\n",
+       "      <td>305.049400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>64184 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Valence      Tiempo\n",
+       "0       0.000000    0.040000\n",
+       "1       0.044345    0.041000\n",
+       "2       0.044345    0.057104\n",
+       "3       0.044345    0.059485\n",
+       "4       0.044345    0.059921\n",
+       "...          ...         ...\n",
+       "64179  20.948343  305.016000\n",
+       "64180  20.948343  305.025900\n",
+       "64181  20.948343  305.032300\n",
+       "64182  20.948343  305.042700\n",
+       "64183  20.948343  305.049400\n",
+       "\n",
+       "[64184 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(np.transpose([df[0]['Dominance'][0],df[0]['Dominance'][1]]), columns = ['Valence','Tiempo'])"
    ]
   },
   {
